# Beya_Waifu

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  FFmpeg_Encoders_List_waifu2xEX.bat  GEMINI.md  LICENSE  README.md  TODO.md  UI_REPAIR_PLAN_PART2.md  WinBuildErrorLog.md  add_copyright.py  apply_fixes.py  apply_patch_bundle.py  build_projects.sh  build_script.ps1  build_windows.ps1  captured_ui_mainwindow.h.txt  cppcheck_report.txt  file_modifier.py  linux_build_script.sh  patch_cmake_full_rhi.py  patch_cmake_translations.py  patch_cmake_translations_v2.py  patch_cmake_translations_v3.py  patch_realesrgan_syntax.py  patch_realesrgan_syntax_v2.py  patch_script.py  patch_ui.py  realcugan_settings.h  realcuganprocessor.cpp  realcuganprocessor.h  requirements.txt  setup_env.sh  simple_build.sh  srmd_settings.h  srmdprocessor.cpp  srmdprocessor.h  styles.qss  temp_build_script.ps1  (+7 more)
.github/workflows/: ci.yml  clazy.yml  cppcheck.yml
Waifu2x-Extension-QT/: AnimatedPNG.cpp  Beya_Waifu_resource.rc  CMakeLists.txt  CompatibilityTest.cpp  Current_File_Progress.cpp  CustomResolution.cpp  Donate.cpp  FileManager.cpp  FileManager.h  Finish_Action.cpp  Frame_Interpolation.cpp  GpuManager.cpp  GpuManager.h  LiquidGlassNode.cpp  LiquidGlassNode.h  LiquidGlassParams.h  LiquidGlassWidget.cpp  LiquidGlassWidget.h  Logger.cpp  Logger.h  Makefile.Debug  Makefile.Release  ProcessExecutor.cpp  ProcessExecutor.h  ProcessRunner.cpp  ProcessRunner.h  RealCuganProcessor.cpp  RealCuganProcessor.h  RealEsrganProcessor.cpp  RealEsrganProcessor.h  RealcuganJobManager.cpp  RealcuganJobManager.h  RealesrganJobManager.cpp  RealesrganJobManager.h  RhiLiquidGlassItem.cpp  RhiLiquidGlassItem.h  Right-click_Menu.cpp  SystemTrayIcon.cpp  TestRhiLiquidGlass.qml  UiController.cpp  (+43 more)
Waifu2x-Extension-QT-Launcher/: Beya_Waifu-Launcher  CMakeLists.txt  Waifu2x-Extension-QT-Launcher.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pic.qrc
Waifu2x-Extension-QT/debug/: object_script.Beya_Waifu.Debug
Waifu2x-Extension-QT/qml/: LiquidGlass.qml
Waifu2x-Extension-QT/realesrgan-ncnn-vulkan/: README_windows.md
Waifu2x-Extension-QT/release/: moc_LiquidGlassWidget.cpp  moc_RealcuganJobManager.cpp  moc_RealesrganJobManager.cpp  moc_VideoProcessor.cpp  moc_mainwindow.cpp  moc_predefs.h  moc_topsupporterslist.cpp  object_script.Beya_Waifu.Release  qrc_OtherPic.cpp  qrc_donate.cpp  qrc_shaders.cpp  qrc_style.cpp
Waifu2x-Extension-QT/release/translations/: qt_de.qm
Waifu2x-Extension-QT/shaders/: liquidglass.frag
Waifu2x-Extension-QT/styles/: button.qss  dark.qss
Waifu2x-Extension-QT/utils/: ffprobe_helpers.h
build-test/: Makefile  moc_RhiLiquidGlassItem.cpp  ui_mainwindow.h  ui_topsupporterslist.h
build_cmake_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
build_cmake_windows/.qt/: QtDeploySupport.cmake
build_cmake_windows/.qt/deploy_qml_imports/: Beya_Waifu.cmake
build_cmake_windows/Waifu2x-Extension-QT/: Makefile  cmake_install.cmake  translations_static.qrc
build_cmake_windows/Waifu2x-Extension-QT-Launcher/: Makefile  cmake_install.cmake
build_cmake_windows/Waifu2x-Extension-QT-Launcher/Beya_Waifu-Launcher_autogen/: deps  moc_predefs.h
build_cmake_windows/Waifu2x-Extension-QT/.qt_plugins/: Qt6_QmlPlugins_Imports_Beya_Waifu.cmake  Qt6_QmlPlugins_Imports_Beya_Waifu.rsp
examples/: LiquidGlassDemo.qml
memory/archival/: 2025-06-18-initial-directories.md  2025-06-18-run-tests-patch-agents.md  2025-06-18-uniform-block-update.md  2025-06-18T085248Z-drop-file-label-removal.md  2025-06-18T091029Z-liquidglass-openGL.md  2025-06-18T0923Z-recursive-scan.md  2025-06-18T094353Z-verbose-logging.md  2025-06-18T195718Z-hdn-passes-fix.md  2025-06-18T211603Z-sound-notification.md  2025-06-18T213809Z-compat-test-progress-reset.md  2025-06-18T215543Z-turn-off-screen.md  2025-06-18T223304Z-remove-init-progressbar.md  2025-06-18T232724Z-compat-test-progress-bar.md  2025-06-19T003857Z-realcugan-multigpu-refresh.md  2025-06-19T010328Z-dropfile-lines-removed.md  2025-06-19T011114Z-contrib-tests.md  2025-06-19T015431Z-style-fallback.md  2025-06-19T022900Z-mainwindow-ui-test.md  2025-06-19T022947Z-liquidglass-qsb-docs.md  2025-06-19T190834Z-remove-captured-header.md  2025-06-20T050524Z-button-style-refactor.md  2025-06-21T091949Z-known-issues.md  2025-06-21T093153Z-current-project-status.md  2025-06-22T034841Z-setClass-fix-layout-analysis.md  2025-06-23-waifu2x-extension-qt-analysis.md  2025-06-24T051919Z_log-summary.md  2025-06-24T093757Z-realcugan-qt-media-check.md  2025-06-24T183813Z-drop-qt5compat.md  2025-06-24T201233Z-header-guards.md  2025-06-24T202500Z-remove-ui-plan.md  2025-06-24T2105Z-liquidglass-shaders.md  2025-06-24T214057Z-pipeframe-encoder-signature.md  2025-06-24T220533Z-qtimer-include.md  2025-06-24T221830Z-qsize-cast.md  2025-06-24T222821Z-qt6-cppcheck-workflow.md  2025-06-24T223635Z-ci-ncnn-pythonpath.md  2025-06-24T224736Z-qt6-qa-review.md  2025-06-24_linker-error-read-input-paths-resolved.md  2025-06-25-recent-merges-summary.md  2025-06-25T201854Z-run-cmake-tests.md  (+4 more)
memory/conversational/: 2025-06-18-session-summary.md  2025-06-25-session-summary.md
persona/: PERSONA.md
realcugan-ncnn-vulkan/: README.md
realcugan-ncnn-vulkan SRC/src/: stb_image.h
realcugan-ncnn-vulkan/src/: CMakeLists.txt  main.cpp  realcugan.cpp  stb_image_write.h
realesrgan-ncnn-vulkan/: README.md
realesrgan-ncnn-vulkan/src/: CMakeLists.txt  main.cpp  realesrgan.cpp  stb_image.h
tests/: __init__.py  test_binaries.py  test_build_projects_windows.py  test_convert_path.ps1  test_default_settings.py  test_gpu_detection.py  test_gpu_job_config.py  test_gui_resources.py  test_image_base64.txt  test_mainwindow_ui_load.py  test_move_to_trash.py  test_qdir_iterator_recursive.py  test_qml_liquidglass.py  test_qprocess_failure.py  test_qstyle_fallback.py  test_realcugan_settings.py  test_realesrgan_settings.py  test_sr_engine_pipe_mode.py  test_upscaler_execution.py  test_verbose_option.py
tools/: build_liquidglass_shader.sh  cppcheck.cfg  run_clazy.sh  run_cppcheck.sh
(+37 files in other folders)
